[package]
name = "online"
version = "1.0.0"
authors = ["Jesús Rubio <jesusprubio@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/online"
include = ["src/**/*", "Cargo.toml"]

description = "📶 Library to check your Internet connectivity (async-std)"
repository = "https://github.com/jesusprubio/online.git"
readme = "README.md"
keywords = [
  "connection",
  "up",
  "tcp",
  "await",
  "async"
]
categories = [
  "network-programming",
  "development-tools",
  "asynchronous",
  "concurrency"
]
license = "MIT"

[package.metadata.commands]
deps = "cargo install cargo-audit cargo-sync-readme && rustup component add rustfmt clippy"
format = "cargo fmt"
postformat = "cargo clippy"
pretest = "cargo cmd format && cargo audit"
test = "cargo test"
posttest = "cargo sync-readme"

[dependencies.async-std]
version = "1.8.0"
features = ["unstable", "attributes"]

[dev-dependencies]
pretty_assertions="0.6.1"
