[package]
name = "online"
version = "3.0.0"
authors = ["Jesús Rubio <jesusprubio@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/online"
include = ["src/**/*", "Cargo.toml"]

description = "📶 Library to check your Internet connectivity"
repository = "https://github.com/jesusprubio/online.git"
readme = "README.md"
keywords = [
  "connection",
  "up",
  "tcp",
  "await",
  "async"
]
categories = [
  "network-programming",
  "development-tools",
  "asynchronous",
  "concurrency"
]
license = "MIT"

[package.metadata.commands]
deps = "cargo install cargo-audit cargo-sync-readme && rustup component add rustfmt clippy"
format = "cargo fmt"
postformat = "cargo clippy"
pretest = "cargo cmd format && cargo audit"
test = "cargo test --features sync"
posttest = "cargo sync-readme"

[features]
default = ["async-std-runtime"]
async-std-runtime = ["async-std"]
sync = []

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"], optional = true }

[dev-dependencies]
pretty_assertions="0.7.2"

[[example]]
name = "sync"
path = "examples/sync.rs"
required-features = ["sync"]

[[test]]
name = "sync"
path = "tests/sync.rs"
required-features = ["sync"]
