[package]
name = "online"
version = "4.0.0"
authors = ["Jesús Rubio <jesusprubio@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/online"
include = ["src/**/*", "Cargo.toml"]

description = "📶 Library to check your Internet connectivity"
repository = "https://github.com/jesusprubio/online.git"
readme = "README.md"
keywords = [
  "connection",
  "up",
  "tcp",
  "tokio",
  "async"
]
categories = [
  "network-programming",
  "development-tools",
  "asynchronous",
  "concurrency"
]
license = "MIT"

[package.metadata.commands]
deps = "cargo install cargo-audit cargo-sync-readme && rustup component add rustfmt clippy"
format = "cargo fmt"
postformat = "cargo clippy"
pretest = "cargo cmd format && cargo audit"
test = "cargo test --features tokio"
posttest = "cargo sync-readme"

[features]
tokio-runtime = ["tokio"]
sync-runtime = []
default = ["sync-runtime"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["net", "time", "rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
pretty_assertions="1.0.3"

[[test]]
name = "tokio"
path = "tests/tokio.rs"
required-features = ["tokio-runtime"]
